added requiremts.txt file

--- a/flaskr/templates/calendar.html
+++ b/flaskr/templates/calendar.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Calendar</title>
+    <title>{% block title %}My Calendar{% endblock %}</title>
 </head>
 <body>
 
