--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,9 +5,12 @@
     <head>
         {% block head %}
         <meta charset="UTF-8">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
               rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
         <title>
             {% block title %}
                 Base
@@ -18,7 +21,7 @@
     <body>
         {% block body %}
             {% block navbar%}
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="{{ url_for('home') }}">CalendarPlusPlus</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +37,7 @@
                     </div>
                 </nav>
             {% endblock navbar%}
-            {% block content %}
+            {%- block content %}
 
             {% endblock content %}
             {% block scripts%}
