--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -20,15 +20,14 @@
             {% block navbar%}
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="{{ url_for('home') }}">CalendarPlusPlus</a>
+                        <a class="navbar-brand" href="{{ url_for('main.home') }}">CalendarPlusPlus</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-                                <a class="nav-link" href="{{ url_for('myCalendar') }}">My Calendar</a>
-                                <a class="nav-link disabled">Disabled</a>
+                                <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
+                                <a class="nav-link" href="{{ url_for('calendar.calendar') }}">My Calendar</a>
                             </div>
                         </div>
                     </div>
