--- a/flaskr/templates/account/register.html
+++ b/flaskr/templates/account/register.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
-<html lang="en">
-<meta charset="UTF-8">
-<title>
-    {% block title %}
-        LOGIN
-    {% endblock %}
-</title>
 {% block head %}
     {{ super() }}
+    <title>
+        {% block title %}
+            REGISTER
+        {% endblock %}
+    </title>
 {% endblock head %}
 {% block content %}
     
 {% endblock %}
-</html>
