--- a/flaskr/templates/account/register.html
+++ b/flaskr/templates/account/register.html
@@ -9,10 +9,14 @@
 {% endblock head %}
 {% block content %}
     <form method="post">
-        <label for="username">Username</label>
-        <input name="username" id="username" required>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-        <input type="submit" value="Register">
+        <div class="form-floating mb-3">
+            <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
+            <label for="username">Username</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
+            <label for="password" class="form-label">Password</label>
+        </div>
+        <input type="submit" class="btn btn-primary" value="REGISTER"/>
     </form>
 {% endblock %}
