--- a/flaskr/templates/account/login.html
+++ b/flaskr/templates/account/login.html
@@ -8,15 +8,17 @@
     </title>
 {% endblock head %}
 {% block content %}
-    <form method="post">
-        <div class="form-floating mb-3">
-            <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
-            <label for="username">Username</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
-            <label for="password" class="form-label">Password</label>
-        </div>
-        <input type="submit" class="btn btn-primary" value="LOGIN"/>
-    </form>
-{% endblock %}
+    {% block login %}
+        <form method="post">
+            <div class="form-floating mb-3">
+                <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
+                <label for="username">Username</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
+                <label for="password" class="form-label">Password</label>
+            </div>
+            <input type="submit" class="btn btn-primary" value="LOGIN"/>
+        </form>
+    {% endblock login %}
+{% endblock content %}
