--- a/flaskr/templates/account/register.html
+++ b/flaskr/templates/account/register.html
@@ -8,23 +8,25 @@
     </title>
 {% endblock head %}
 {% block content %}
-    <form method="post">
-        <div class="form-floating mb-3">
-            <input name="first_name" class="form-control" id="first_name" placeholder="First" required>
-            <label for="first_name">First Name</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input name="last_name" class="form-control" id="last_name" placeholder="Last" required>
-            <label for="last_name">Last Name</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
-            <label for="username">Username</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
-            <label for="password" class="form-label">Password</label>
-        </div>
-        <input type="submit" class="btn btn-primary" value="REGISTER"/>
-    </form>
+    <main class="text-center toast-body justify-content-center">
+        <form method="post" class="form-signin">
+            <div class="form-floating">
+                <input name="first_name" class="form-control" id="first_name" placeholder="First" required>
+                <label for="first_name">First Name</label>
+            </div>
+            <div class="form-floating">
+                <input name="last_name" class="form-control" id="last_name" placeholder="Last" required>
+                <label for="last_name">Last Name</label>
+            </div>
+            <div class="form-floating">
+                <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
+                <label for="username">Username</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
+                <label for="password" class="form-label">Password</label>
+            </div>
+            <input type="submit" class="btn btn-primary " value="REGISTER"/>
+        </form>
+    </main>
 {% endblock %}
