--- a/flaskr/templates/account/login.html
+++ b/flaskr/templates/account/login.html
@@ -9,16 +9,18 @@
 {% endblock head %}
 {% block content %}
     {% block login %}
-        <form method="post">
-            <div class="form-floating mb-3">
+        <main class="text-center toast-body justify-content-center">
+        <form method="post" class="form-signin">
+            <div class="form-floating">
                 <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
                 <label for="username">Username</label>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating">
                 <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
                 <label for="password" class="form-label">Password</label>
             </div>
-            <input type="submit" class="btn btn-primary" value="LOGIN"/>
+            <input type="submit" class="btn btn-primary " value="LOGIN"/>
         </form>
+    </main>
     {% endblock login %}
 {% endblock content %}
