--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -9,9 +9,9 @@
 {% block content %}
     <h1>WELCOME TO CALENDARPLUSPUS!</h1>
     <ul>
-        <li><a href="{{ url_for('authenticate.logout') }}">Log Out</a>
-        <li><a href="{{ url_for('authenticate.register') }}">Register</a>
-        <li><a href="{{ url_for('authenticate.login') }}">Log In</a>
+        <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+        <li><a href="{{ url_for('auth.register') }}">Register</a>
+        <li><a href="{{ url_for('auth.login') }}">Log In</a>
     </ul>
 {% endblock %}
 </html>
