added emoji for fun lol

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -43,7 +43,7 @@
                     {% if messages %}
                         <ul class=flashes>
                         {% for message in messages %}
-                            <li>{{ message }}</li>
+                            <h6>{{ message }} &#x1F613;</h6>
                         {% endfor %}
                         </ul>
                     {% endif %}
