--- a/flaskr/templates/account/login.html
+++ b/flaskr/templates/account/login.html
@@ -9,18 +9,21 @@
 {% endblock head %}
 {% block content %}
     {% block login %}
-        <main class="text-center toast-body justify-content-center">
-        <form method="post" class="form-signin">
-            <div class="form-floating">
-                <input name="username" class="form-control" id="username" placeholder="name@example.com" required>
-                <label for="username">Username</label>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
-                <label for="password" class="form-label">Password</label>
-            </div>
-            <input type="submit" class="btn btn-primary " value="LOGIN"/>
-        </form>
-    </main>
+        <main class="container d-flex justify-content-center align-items-center"
+              style="min-height: 100vh">
+            <form method="post" class="border shadow p-3 rounded"
+                  style="width: 25vw;">
+                <h1 class="text-center p-3">LOGIN</h1>
+                <div class="form-floating mb-3">
+                    <input name="username" class="form-control" id="username" placeholder="username" required autofocus>
+                    <label for="username">Username</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="********" required>
+                    <label for="password" class="form-label">Password</label>
+                </div>
+                <input type="submit" class="btn btn-primary " value="LOGIN"/>
+            </form>
+        </main>
     {% endblock login %}
 {% endblock content %}
