show calendar links only if user is logged in

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -24,15 +24,19 @@
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="{{ url_for('main.home') }}">CalendarPlusPlus</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
-                                <a class="nav-link" href="{{ url_for('calendar.calendar') }}">My Calendar</a>
+                        {% if g.user %}
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon">-</span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <a class="nav-link active" aria-current="page" href="{{ url_for('calendar.calendar') }}">Day</a>
+                                    <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Month</a>
+                                    <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Year</a>
+                                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+                                </div>
                             </div>
-                        </div>
+                        {% endif %}
                     </div>
                 </nav>
             {% endblock navbar%}
