tried creating decorator for authentication and refactored base.html

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -21,24 +21,7 @@
     <body>
         {% block body %}
             {% block navbar%}
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="{{ url_for('main.home') }}">CalendarPlusPlus</a>
-                        {% if g.user %}
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon">-</span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                                <div class="navbar-nav">
-                                    <a class="nav-link active" aria-current="page" href="{{ url_for('calendar.calendar') }}">Day</a>
-                                    <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Month</a>
-                                    <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Year</a>
-                                    <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
-                                </div>
-                            </div>
-                        {% endif %}
-                    </div>
-                </nav>
+                {% include 'navbar.html' %}
             {% endblock navbar%}
             {%- block content %}
 
