--- a/flaskr/templates/calendar/calendar.html
+++ b/flaskr/templates/calendar/calendar.html
@@ -9,24 +9,11 @@
     {% endblock %}
 </title>
 
-<style>
-
-</style>
-
 {% block head %}
     {{ super() }}
 {% endblock head %}
 {% block content %}
     {% block calendar %}
-
-
-<style>
-    div .align-right {
-        padding-left: 400px;
-    }
-</style>
-
-<!-- Body -->
         <div class="container-md my-2">
             <div class="calendar-header">
                 <nav>
@@ -36,7 +23,7 @@
                     <button type="button" class="btn btn-info" id="next">
                         <i class="bi bi-arrow-right"></i>
                     </button>
-                    <div class="btn-group align-right" role="group" aria-label="Basic radio toggle button group">
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked="">
                         <label class="btn btn-outline-primary" for="btnradio1">Daily</label>
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked="">
