--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,52 +1,55 @@
 {% block doc %}
 <!DOCTYPE html>
 <html lang="en">
-{% block html %}
-    <head>
-        {% block head %}
-        <meta charset="UTF-8">
+<head>
+{% block head %}
+    <meta charset="UTF-8">
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-              rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
-        <title>
-            {% block title %}
-                Base
-            {% endblock title %}
-        </title>
-        {%  endblock head %}
-    </head>
-    <body>
-        {% block body %}
-            {% block navbar%}
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="{{ url_for('main.home') }}">CalendarPlusPlus</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
-                                <a class="nav-link" href="{{ url_for('calendar.calendar') }}">My Calendar</a>
-                            </div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+    <title>
+        {% block title %}
+            Base
+        {% endblock title %}
+    </title>
+{%  endblock head %}
+</head>
+<body>
+    {% block body %}
+        {% block navbar%}
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{ url_for('main.home') }}">CalendarPlusPlus</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
+                            <a class="nav-link" href="{{ url_for('calendar.calendar') }}">My Calendar</a>
                         </div>
                     </div>
-                </nav>
-            {% endblock navbar%}
-            {%- block content %}
+                </div>
+            </nav>
+        {% endblock navbar%}
+        {%- block content %}
 
-            {% endblock content %}
-            {% block scripts%}
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                        crossorigin="anonymous">
-                </script>
-             {% endblock scripts %}
-        {% endblock body %}
-    </body>
-{% endblock html %}
+        {% endblock content %}
+        {% block scripts%}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                    crossorigin="anonymous">
+            </script>
+         {% endblock scripts %}
+    {% endblock body %}
+    <footer class="footer">
+        Footer
+    </footer>
+</body>
 </html>
 {% endblock doc %}
