--- a/flaskr/templates/calendar/calendar.html
+++ b/flaskr/templates/calendar/calendar.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_cal.html' %}
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,40 +12,53 @@
 {% block head %}
     {{ super() }}
 {% endblock head %}
-{% block content %}
-    {% block calendar %}
-        <div class="container-md my-2">
-            <div class="calendar-header">
-                <button type="button" class="btn btn-info" id="prev">
-                    <i class="bi bi-arrow-left"></i>
-                </button>
-                <button type="button" class="btn btn-info" id="next">
-                    <i class="bi bi-arrow-right"></i>
-                </button>
-                <div class="row header-title">
-                    <div class="header-text my-3">
-                        <h3 id="date"></h3>
-                    </div>
+
+
+{% block view %}
+    {{ super() }}
+{% endblock %}
+{% block side_content %}
+    <p>
+    this is a super long comment for testing.
+        this is a super long comment for testing.
+        this is a super long comment for testing.
+        this is a super long comment for testing.
+        this is a super long comment for testing.
+        this is a super long comment for testing.
+    </p>
+{%  endblock side_content %}
+{% block calendar %}
+    <div class="container-md my-2">
+        <div class="calendar-header">
+            <button type="button" class="btn btn-info" id="prev">
+                <i class="bi bi-arrow-left"></i>
+            </button>
+            <button type="button" class="btn btn-info" id="next">
+                <i class="bi bi-arrow-right"></i>
+            </button>
+            <div class="row header-title">
+                <div class="header-text my-3">
+                    <h3 id="date"></h3>
                 </div>
             </div>
-            <div class="calendar-content">
-                <div id="calendar-table">
-                    <div id="table-header">
-                        <div class="row">
-                            <div class="col">Mon</div>
-                            <div class="col">Tue</div>
-                            <div class="col">Wed</div>
-                            <div class="col">Thu</div>
-                            <div class="col">Fri</div>
-                            <div class="col">Sat</div>
-                            <div class="col">Sun</div>
-                        </div>
+        </div>
+        <div class="calendar-content">
+            <div id="calendar-table">
+                <div id="table-header">
+                    <div class="row">
+                        <div class="col">Mon</div>
+                        <div class="col">Tue</div>
+                        <div class="col">Wed</div>
+                        <div class="col">Thu</div>
+                        <div class="col">Fri</div>
+                        <div class="col">Sat</div>
+                        <div class="col">Sun</div>
                     </div>
                 </div>
             </div>
         </div>
-    {% endblock calendar %}
-{% endblock content %}
+    </div>
+{% endblock calendar %}
 {% block scripts %}
     {{ super() }}
     <script>
