basic extendable layout

--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -16,7 +16,7 @@
 {% block content %}
     <div class="row" style="margin: auto; height: 100%">
         {% block sidebar %}
-            <div class="col col-lg-2 bg-dark text-primary">
+            <div class="col col-lg-2 bg-dark text-primary min-vh-100">
                 <div id="sidebar">
                     <div class="sidebar-header">
                         {% block view %}
