--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -15,17 +15,12 @@
 
 
 {% block view %}
-    {{ super() }}
+    <h3 class="justify-content-center">
+        Month
+    </h3>
 {% endblock %}
 {% block side_content %}
-    <p>
-    this is a super long comment for testing.
-        this is a super long comment for testing.
-        this is a super long comment for testing.
-        this is a super long comment for testing.
-        this is a super long comment for testing.
-        this is a super long comment for testing.
-    </p>
+
 {%  endblock side_content %}
 {% block calendar %}
     <div class="container-md my-2">
