basic extendable layout

--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -3,11 +3,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>
-    {% block title %}
-        My Calendar
-    {% endblock %}
-</title>
+{% block title %}
+    Month
+{% endblock %}
 
 {% block head %}
     {{ super() }}
