--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -9,7 +9,7 @@
 {% block content %}
     <h1>WELCOME TO CALENDARPLUSPUS!</h1>
     <ul>
-        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+        <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Calendar</a>
     </ul>
 {% endblock %}
 </html>
