--- a/flaskr/templates/navbar.html
+++ b/flaskr/templates/navbar.html
@@ -6,7 +6,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="{{ url_for('calendar.calendar') }}">Day</a>
                     <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Month</a>
-                    <a class="nav-link" href="{{ url_for('calendar.calendar') }}">Year</a>
+                    <a class="nav-link" href="{{ url_for('calendar.yearly_view') }}">Year</a>
                 </div>
                 <span class="navbar-text">
                     <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
