--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
         {% endblock sidebar %}
-        <div class="col col-lg">
+        <div class="col col-lg min-vh-100">
             {% block calendar %}
             {% endblock calendar %}
         </div>
