--- a/flaskr/templates/navbar.html
+++ b/flaskr/templates/navbar.html
@@ -12,6 +12,7 @@
                 <span class="navbar-text">
                     <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
                 </span>
+            </div>
         {% endif %}
     </div>
 </nav>
