updated navbar and views to properly display selected page

--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -64,4 +64,9 @@
     d = n.getDate();
     document.getElementById("date").innerHTML = m + "/" + d + "/" + y;
 </script>
+<script>
+    day = document.getElementById("day")
+    day.classList.add('active')
+    day.setAttribute("aria-current","page")
+</script>
 {% endblock scripts %}
