--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="row" style="margin: auto; height: 100%">
         {% block sidebar %}
-            <div class="col col-lg-2 bg-dark text-primary min-vh-100">
+            <div class="col col-lg-2 bg-dark text-primary min-vh-100" style="min-width: 20em;">
                 <div id="sidebar">
                     <div class="sidebar-header">
                         {% block view %}
