--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -14,17 +14,17 @@
 
 {% endblock side_content %}
 {% block calendar %}
-    <div class="container-fluid mt-4">
-        <div class="container-md my-2">
-            <div class="calendar-header">
-                <div class="row header-title">
-                    <div class="header-text my-3">
-                        <h1 id="date" class="text-center"> {{ cal.month_name[month] }},  {{ year }}</h1>
-                    </div>
+    <div class="container-fluid my-2">
+        <div class="calendar-header">
+            <div class="row header-title">
+                <div class="header-text my-3">
+                    <h1 id="date" class="text-center"> {{ cal.month_name[month] }},  {{ year }}</h1>
                 </div>
             </div>
-            <table class="table table-sm table-responsive table-hover table-bordered" id="calendar-table">
-                <thead class="table-dark text-center" id="table-header">
+        </div>
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered" id="calendar-table">
+                <thead class="table-primary text-center" id="table-header">
                     <th />
                     {% for date, day in week %}
                         <th>{{ cal.day_name[day] }}
