added regex to fix datestr format; event array retrived for weekly view

--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -37,7 +37,7 @@
                         <tr>
                             <td style="padding: 0.5em">{{ hour }}</td>
                             {% for num in range(7) %}
-                                <td id="days"></td>
+                                <td id="days">{{ events }}</td>
                             {% endfor %}
                         </tr>
                     {% endfor %}
